tests/typechecker/should_pass/datatype_equality.csp
datatype X = Y.X | Z

test1 = (Y.Z) == (Y.Z)
