tests/typechecker/should_fail/datatypes_not_always_comparable.csp
datatype X = Y.Proc

test1 = (Y.STOP) == (Y.STOP)
